--- a/qrzalo.html
+++ b/qrzalo.html
@@ -18,18 +18,18 @@
         </div>
 
         <ul id="list1">
-            <li>RESUME</li>
-            <li>PROJECT</li>
-            <li>Roadmaps</li>
+            <li><a href="/resume.html">RESUME</a></li>
+            <li><a href="/project.html">PROJECT</a></li>
+            <li><a href="/roadsmap.html">Roadmaps</a></li>
         </ul>
 
         <button id="nav-button">
             <i class="fa fa-bars" aria-hidden="true" style="transform: scale(4)"></i>
         </button>
         <ul id="list2">
-            <li>RESUME</li>
-            <li>PROJECT</li>
-            <li>Roadmaps</li>
+            <li><a href="/resume.html">RESUME</a></li>
+            <li><a href="/project.html">PROJECT</a></li>
+            <li><a href="/roadsmap.html">Roadmaps</a></li>
         </ul>
     </nav>
     <div class="hr"></div>
