--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Võ Nguyễn Duy Tân</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://vndt-082.github.io/profile/style.css" />
+    <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body>
@@ -35,31 +35,7 @@
     <div class="hr"></div>
     <main id="main">
         <div id="main-info">
-            <div class="intro-info">
-                <h2 class="name name-main" style="width: 100%; text-align: center; 
-                text-transform: uppercase;">Welcome to</h2>
-                <h1 class="name name-main" style="width: 100%; text-align: center; 
-                text-transform: uppercase;">Võ Nguyễn Duy Tân</h1>
-                <ul>
-                    <li>
-                        <a href="https://github.com/VNDT-082"><img src="/icons8-github-128.png" /></a>
-                    </li>
-                    <li id="gamil">
-                        <a><img src="/icons8-email-96.png" /><br />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/qrzalo.html"><img src="/icons8-zalo-96.png" /></a>
-                    </li>
-                </ul>
-                <h5 id="gmail-value" class="name-main" style="display: none;">vonguyenduytan08022002@gmail.com</h5>
-            </div>
-            <div class="intro-avarta">
-                <div>
-                    <img src="/avarta.jpg" />
-                </div>
 
-            </div>
         </div>
 
     </main>
