--- a/roadsmap.html
+++ b/roadsmap.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Võ Nguyễn Duy Tân</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://vndt-082.github.io/profile/style.css" />
+    <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body>
