--- a/resume.html
+++ b/resume.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Võ Nguyễn Duy Tân</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="https://vndt-082.github.io/profile/style.css" />
 </head>
 
 <body>
     <nav class="nav">
         <div class="name">
-            <a href="/index.html">
+            <a href="https://vndt-082.github.io/profile/index.html">
                 <h1>VNDT-082 <br /><span>my profile</span></h1>
             </a>
         </div>
 
         <ul id="list1">
-            <li><a href="/resume.html">RESUME</a></li>
-            <li><a href="/project.html">PROJECT</a></li>
-            <li><a href="/roadsmap.html">Roadmaps</a></li>
+            <li><a href="https://vndt-082.github.io/profile/resume.html">RESUME</a></li>
+            <li><a href="https://vndt-082.github.io/profile/project.html">PROJECT</a></li>
+            <li><a href="https://vndt-082.github.io/profile/roadsmap.html">Roadmaps</a></li>
         </ul>
 
         <button id="nav-button">
             <i class="fa fa-bars" aria-hidden="true" style="transform: scale(4)"></i>
         </button>
         <ul id="list2">
-            <li><a href="/resume.html">RESUME</a></li>
-            <li><a href="/project.html">PROJECT</a></li>
-            <li><a href="/roadsmap.html">Roadmaps</a></li>
+            <li><a href="https://vndt-082.github.io/profile/resume.html">RESUME</a></li>
+            <li><a href="https://vndt-082.github.io/profile/project.html">PROJECT</a></li>
+            <li><a href="https://vndt-082.github.io/profile/roadsmap.html">Roadmaps</a></li>
         </ul>
     </nav>
     <div class="hr"></div>
@@ -39,11 +39,12 @@
             <h1><b>SUMMARY:</b></h1>
             <ul>
                 <li>
-                    I am a final-year student at HO CHI MINH CITY UNIVERSITY OF INDUSTRY AND TRADE (HUIT)
+                    I am a student at HO CHI MINH CITY UNIVERSITY OF INDUSTRY AND TRADE (HUIT)
                     , majoring in Information Technology with a specialization in Software Engineering.
-                    (since: 2020)
+                    (since: 2020).
+                    Graduated from HO CHI MINH CITY UNIVERSITY OF INDUSTRY AND TRADE (HUIT) since 11/2024.
                     <br />
-                    <b style="color: red;">Semester GPA: 7,46 (GPA out of 4: 3.05).</b>
+                    <b style="color: red;">Semester GPA: 7.58 (GPA out of 4: 3.10).</b>
                 </li>
                 <li>
                     I have experiance and strong at Software and Web Application with C# and using framework as
@@ -54,10 +55,12 @@
                     <b style="color: chartreuse;">SQL Server</b>.
                 </li>
                 <li>
-                    I have <b style="color: red;">three month internship</b> at
-                    <b><a style="color: blue;" href="https://amazingtech.vn">amazingtech.vn</a></b> with position C#
-                    ASP.NET Core back-end
-                    development. And I was take part in project "Nhà máy nước" in there.
+                    I have <b style="color: red;">Five months internship and collaborator</b> at
+                    <b><a style="color: blue;" href="https://gsoft.com.vn/trang-chu/">Hoan Cau Software Company (GSOFT)</a></b> with
+                    position C#
+                    ASP.NET Core back-end, Angular and SQL server
+                    development. And I was take part in more projects about "asset management" for many bank such as Sacombank, HD Bank,
+                    BIDV,BanViet Bank anh asset management of Ho Chi Minh City National University and BaoViet Life Insurance in there.
                 </li>
             </ul>
         </div>
@@ -71,13 +74,14 @@
                                 <li><b style="color: blue;">C# (C-Sharp):</b> ASP.NET, ASP.NET Core, .NET Framework,
                                     Entity Framework, ADO.NET</li>
                                 <li><b style="color: blue;">Java:</b> Swing, Android</li>
-                                <li><b style="color: blue;">PHP:</b> PHP Core</li>
+                                <li><b style="color: blue;">PHP:</b> PHP Core, Laravel framework</li>
                             </ul>
                         </li>
                         <li>Front-end:
                             <ul>
                                 <li><b style="color: red;">HTML, CSS, JS</b></li>
                                 <li><b style="color: red;">ReactJS ➡ NEXTJS</b></li>
+                                <li><b style="color: red;">ANGULAR</b></li>
                             </ul>
                         </li>
                         <li><b style="color: chartreuse;">Testing</b></li>
@@ -92,7 +96,7 @@
                     </ul>
                 </li>
                 <li><b>IDE:</b>Visual Studio, Visual Studio Code, Android Studio, NetBeans,
-                    Microsoft SQL Server.</li>
+                    Microsoft SQL Server, DBForge studio for SQL Server.</li>
                 <li><b style="color: red;">Git</b></li>
             </ul>
         </div>
