--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 <body>
     <nav class="nav">
         <div class="name">
-            <a href="/index.html">
+            <a href="https://vndt-082.github.io/profile/index.html">
                 <h1>VNDT-082 <br /><span>my profile</span></h1>
             </a>
         </div>
 
         <ul id="list1">
-            <li><a href="/resume.html">RESUME</a></li>
-            <li><a href="/project.html">PROJECT</a></li>
-            <li><a href="/roadsmap.html">Roadmaps</a></li>
+            <li><a href="https://vndt-082.github.io/profile/resume.html">RESUME</a></li>
+            <li><a href="https://vndt-082.github.io/profile/project.html">PROJECT</a></li>
+            <li><a href="https://vndt-082.github.io/profile/roadsmap.html">Roadmaps</a></li>
         </ul>
 
         <button id="nav-button">
             <i class="fa fa-bars" aria-hidden="true" style="transform: scale(4)"></i>
         </button>
         <ul id="list2">
-            <li><a href="/resume.html">RESUME</a></li>
-            <li><a href="/project.html">PROJECT</a></li>
-            <li><a href="/roadsmap.html">Roadmaps</a></li>
+            <li><a href="https://vndt-082.github.io/profile/resume.html">RESUME</a></li>
+            <li><a href="https://vndt-082.github.io/profile/project.html">PROJECT</a></li>
+            <li><a href="https://vndt-082.github.io/profile/roadsmap.html">Roadmaps</a></li>
         </ul>
     </nav>
     <div class="hr"></div>
@@ -42,21 +42,22 @@
                 text-transform: uppercase;">Võ Nguyễn Duy Tân</h1>
                 <ul>
                     <li>
-                        <a href="https://github.com/VNDT-082"><img src="/icons8-github-128.png" /></a>
+                        <a href="https://github.com/VNDT-082"><img src="https://vndt-082.github.io/profile/icons8-github-128.png" /></a>
                     </li>
                     <li id="gamil">
-                        <a><img src="/icons8-email-96.png" /><br />
+                        <a><img src="https://vndt-082.github.io/profile/icons8-email-96.png" /><br />
                         </a>
                     </li>
                     <li>
-                        <a href="/qrzalo.html"><img src="/icons8-zalo-96.png" /></a>
+                        <a href="https://vndt-082.github.io/profile/qrzalo.html"><img
+                                src="https://vndt-082.github.io/profile/icons8-zalo-96.png" /></a>
                     </li>
                 </ul>
                 <h5 id="gmail-value" class="name-main" style="display: none;">vonguyenduytan08022002@gmail.com</h5>
             </div>
             <div class="intro-avarta">
                 <div>
-                    <img src="/avarta.jpg" />
+                    <img src="https://vndt-082.github.io/profile/avarta.jpg" />
                 </div>
 
             </div>
