--- a/project.html
+++ b/project.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Võ Nguyễn Duy Tân</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="https://vndt-082.github.io/profile/style.css" />
 </head>
 
 <body>
     <nav class="nav">
         <div class="name">
-            <a href="/index.html">
+            <a href="https://vndt-082.github.io/profile/index.html">
                 <h1>VNDT-082 <br /><span>my profile</span></h1>
             </a>
         </div>
 
         <ul id="list1">
-            <li><a href="/resume.html">RESUME</a></li>
-            <li><a href="/project.html">PROJECT</a></li>
-            <li><a href="/roadsmap.html">Roadmaps</a></li>
+            <li><a href="https://vndt-082.github.io/profile/resume.html">RESUME</a></li>
+            <li><a href="https://vndt-082.github.io/profile/project.html">PROJECT</a></li>
+            <li><a href="https://vndt-082.github.io/profile/roadsmap.html">Roadmaps</a></li>
         </ul>
 
         <button id="nav-button">
             <i class="fa fa-bars" aria-hidden="true" style="transform: scale(4)"></i>
         </button>
         <ul id="list2">
-            <li><a href="/resume.html">RESUME</a></li>
-            <li><a href="/project.html">PROJECT</a></li>
-            <li><a href="/roadsmap.html">Roadmaps</a></li>
+            <li><a href="https://vndt-082.github.io/profile/resume.html">RESUME</a></li>
+            <li><a href="https://vndt-082.github.io/profile/project.html">PROJECT</a></li>
+            <li><a href="https://vndt-082.github.io/profile/roadsmap.html">Roadmaps</a></li>
         </ul>
     </nav>
     <div class="hr"></div>
