--- a/roadsmap.html
+++ b/roadsmap.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="nav">
         <div class="name">
-            <a href="/index.html">
+            <a href="https://vndt-082.github.io/profile/index.html">
                 <h1>VNDT-082 <br /><span>my profile</span></h1>
             </a>
         </div>
